MAJ responsive sur images

--- a/galerie.html
+++ b/galerie.html
@@ -59,33 +59,59 @@
             <main class="row">
                 <div class="flexbox-left">
                     <div class="galery">
-                        <a href="#" data-fancybox="gallerie" data-src="img/gite-1.jpg" data-caption="Le gîte n°1">
-                            <img class="img-borders img-galery" src="img/gite-1.jpg" alt="le gîte 1">
-                        </a>
-                        <a href="#" data-fancybox="gallerie" data-src="img/gite-2.jpg" data-caption="Le gîte n°2">
-                            <img class="img-borders img-galery" src="img/gite-2.jpg" alt="le gîte 2">
-                        </a>
-                        <a href="#" data-fancybox="gallerie" data-src="img/gite-3.jpg" data-caption="Le gîte n°3">
-                            <img class="img-borders img-galery" src="img/gite-3.jpg" alt="le gîte 3">
-                        </a>
-                        <a href="#" data-fancybox="gallerie" data-src="img/jardin-1.jpg" data-caption="Le jardin 1">
-                            <img class="img-borders img-galery" src="img/jardin-1.jpg" alt="le jardin 1">
-                        </a>
-                        <a href="#" data-fancybox="gallerie" data-src="img/jardin-2.jpg" data-caption="Le jardin 2">
-                            <img class="img-borders img-galery" src="img/jardin-2.jpg" alt="le jardin 2">
-                        </a>
-                        <a href="#" data-fancybox="gallerie" data-src="img/jardin-3.jpg" data-caption="Le jardin 3">
-                            <img class="img-borders img-galery" src="img/jardin-3.jpg" alt="le jardin 3">
-                        </a>
-                        <a href="#" data-fancybox="gallerie" data-src="img/potager-1.jpg" data-caption="Le potager 1">
-                            <img class="img-borders img-galery" src="img/potager-1.jpg" alt="le potager 1">
-                        </a>
-                        <a href="#" data-fancybox="gallerie" data-src="img/potager-2.jpg" data-caption="Le potager 2">
-                            <img class="img-borders img-galery" src="img/potager-2.jpg" alt="le potager 2">
-                        </a>
-                        <a href="#" data-fancybox="gallerie" data-src="img/potager-3.jpg" data-caption="Le potager 3">
-                            <img class="img-borders img-galery" src="img/potager-3.jpg" alt="le potager 3">
-                        </a>
+                        <div class="row-galery">
+                            <div class="galery-container">
+                                <a href="#" data-fancybox="gallerie" data-src="img/gite-1.jpg" data-caption="Le gîte n°1">
+                                    <img class="img-borders" src="img/gite-1.jpg" alt="le gîte 1">
+                                </a>
+                            </div>
+                            <div class="galery-container">
+                                <a href="#" data-fancybox="gallerie" data-src="img/gite-2.jpg" data-caption="Le gîte n°2">
+                                    <img class="img-borders" src="img/gite-2.jpg" alt="le gîte 2">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="row-galery">
+                            <div class="galery-container">
+                                <a href="#" data-fancybox="gallerie" data-src="img/gite-3.jpg" data-caption="Le gîte n°3">
+                                    <img class="img-borders" src="img/gite-3.jpg" alt="le gîte 3">
+                                </a>
+                            </div>
+                            <div class="galery-container">
+                                <a href="#" data-fancybox="gallerie" data-src="img/jardin-1.jpg" data-caption="Le jardin 1">
+                                    <img class="img-borders" src="img/jardin-1.jpg" alt="le jardin 1">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="row-galery">
+                            <div class="galery-container">
+                                <a href="#" data-fancybox="gallerie" data-src="img/jardin-2.jpg" data-caption="Le jardin 2">
+                                    <img class="img-borders" src="img/jardin-2.jpg" alt="le jardin 2">
+                                </a>
+                            </div>
+                            <div class="galery-container">
+                                <a href="#" data-fancybox="gallerie" data-src="img/jardin-3.jpg" data-caption="Le jardin 3">
+                                    <img class="img-borders" src="img/jardin-3.jpg" alt="le jardin 3">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="row-galery">
+                            <div class="galery-container">
+                                <a href="#" data-fancybox="gallerie" data-src="img/potager-1.jpg" data-caption="Le potager 1">
+                                    <img class="img-borders" src="img/potager-1.jpg" alt="le potager 1">
+                                </a>
+                            </div class="galery-container">
+                            <div class="galery-container">
+                                <a href="#" data-fancybox="gallerie" data-src="img/potager-2.jpg" data-caption="Le potager 2">
+                                    <img class="img-borders" src="img/potager-2.jpg" alt="le potager 2">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="galery-container">
+                            <a href="#" data-fancybox="gallerie" data-src="img/potager-3.jpg" data-caption="Le potager 3">
+                                <img class="img-borders" src="img/potager-3.jpg" alt="le potager 3">
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <aside class="flexbox-right">
